force-app/zurich-base/main/default/objects/purecloud__PureCloud_Chat_Transcript__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Genesys Cloud Interaction Transcripts</relationshipLabel>
    <relationshipName>Genesys_Cloud_Interaction_Transcripts</relationshipName>
    <type>Lookup</type>
</CustomField>