force-app/zurich-base/main/default/objects/purecloud__PureCloud_Chat_Transcript__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Genesys Cloud Interaction Transcripts</relationshipLabel>
    <relationshipName>Genesys_Cloud_Interaction_Transcripts</relationshipName>
    <type>Lookup</type>
</CustomField>