force-app/zurich-base/main/default/objects/purecloud__PureCloud_Chat_Transcript__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Genesys Cloud Interaction Transcripts</relationshipLabel>
    <relationshipName>Genesys_Cloud_Interaction_Transcripts</relationshipName>
    <type>Lookup</type>
</CustomField>